--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Birthday wishes</title>
-<link rel="stylesheet" href="style (3).css">
+<link rel="stylesheet" href="style.css">
 <script src="fabric.js"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
